Update microblaze branch to gcc-4.2.4.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/microblaze@152866 138bc75d-0d04-0410-961f-82ee72b054a4