@@ -1,5 +1,5 @@
 /* GeneralNames.java -- the GeneralNames object
-   Copyright (C) 2004  Free Software Foundation, Inc.
+   Copyright (C) 2004, 2006  Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -42,7 +42,6 @@ import gnu.java.security.OID;
 import gnu.java.security.der.DER;
 import gnu.java.security.der.DERReader;
 import gnu.java.security.der.DERValue;
-import gnu.java.security.x509.X500DistinguishedName;
 
 import java.io.IOException;
 import java.net.InetAddress;
@@ -51,6 +50,8 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
+
+import javax.security.auth.x500.X500Principal;
 
 public class GeneralNames
 {
@@ -81,13 +82,15 @@ public class GeneralNames
     if (!nameList.isConstructed())
       throw new IOException("malformed GeneralNames");
     int len = 0;
+    int i = 0;
     while (len < nameList.getLength())
       {
         DERValue name = der.read();
         List namePair = new ArrayList(2);
-        if (name.getTagClass() != DER.APPLICATION)
-          throw new IOException("malformed GeneralName");
-        namePair.add(new Integer(name.getTag()));
+        int tagClass = name.getTagClass();
+        if (tagClass != DER.CONTEXT)
+          throw new IOException("malformed GeneralName: Tag class is " + tagClass);
+        namePair.add(Integer.valueOf(name.getTag()));
         DERValue val = null;
         switch (name.getTag())
           {
@@ -99,6 +102,15 @@ public class GeneralNames
             break;
 
           case OTHER_NAME:
+            // MUST return the encoded bytes of the OID/OctetString sequence
+            byte[] anotherName = name.getEncoded();
+            anotherName[0] = (byte) (DER.CONSTRUCTED|DER.SEQUENCE);
+            namePair.add(anotherName);
+            // DERReader goes back on Constructed things so we need to skip over them
+            DERValue skip = der.read(); // skip OID
+            skip = der.read(); // skip Octet String
+            break;
+            
           case EDI_PARTY_NAME:
             namePair.add(name.getValue());
             break;
@@ -106,7 +118,9 @@ public class GeneralNames
           case DIRECTORY_NAME:
             byte[] b = name.getEncoded();
             b[0] = (byte) (DER.CONSTRUCTED|DER.SEQUENCE);
-            namePair.add(new X500DistinguishedName(b).toString());
+            DERReader r = new DERReader (b);
+            r.read ();
+            namePair.add(new X500Principal(r.read ().getEncoded ()).toString());
             break;
 
           case IP_ADDRESS:
