@@ -367,7 +367,7 @@ public class X509CertSelector implements CertSelector, Cloneable
    * Sets the authority key identifier criterion, or <code>null</code> to clear
    * this criterion. Note that the byte array is cloned to prevent modification.
    *
-   * @param subjectKeyId The subject key identifier.
+   * @param authKeyId The authority key identifier.
    */
   public void setAuthorityKeyIdentifier(byte[] authKeyId)
   {
@@ -695,7 +695,7 @@ public class X509CertSelector implements CertSelector, Cloneable
     if (altNames == null)
       altNames = new LinkedList();
     ArrayList l = new ArrayList(2);
-    l.add(new Integer(id));
+    l.add(Integer.valueOf(id));
     l.add(name);
     altNames.add(l);
   }
@@ -714,7 +714,7 @@ public class X509CertSelector implements CertSelector, Cloneable
     if (altNames == null)
       altNames = new LinkedList();
     ArrayList l = new ArrayList(2);
-    l.add(new Integer(id));
+    l.add(Integer.valueOf(id));
     l.add(name);
     altNames.add(l);
   }
